# bottle-scan

rudolfs/bottle-recognizer/: .gitignore  CMakeLists.txt  README.md
rudolfs/bottle-recognizer/src/: main.cpp
